@@ -7,6 +7,7 @@
 	- directory loading supports wildcards
 	- support for file overwrite (@)
 	- option to display hidden files in directory
+	- filename matching for open
 
 2007-11-02 - release 0.2.1
 	- bugfix: Don't cause repeated entries at the end of the directory
